@@ -40,7 +40,8 @@ x86_trace_dummy ()
        "    call " SYMBOL(x86_trace_dummy) "\n" \
        )
 
-#elif (defined __aarch64__) || (defined __powerpc__)
+#elif (defined __aarch64__) || (defined __powerpc__) \
+  || (defined __arm__ && !defined __thumb__)
 
 #define FAST_TRACEPOINT_LABEL(name) \
   asm ("    .global " SYMBOL(name) "\n" \
@@ -48,8 +49,15 @@ x86_trace_dummy ()
        "    nop\n" \
        )
 
-#elif (defined __s390__)
+#elif (defined __arm__ && defined __thumb2__)
 
+#define FAST_TRACEPOINT_LABEL(name) \
+  asm ("    .global " SYMBOL(name) "\n" \
+       SYMBOL(name) ":\n" \
+       "    nop.w\n" \
+       )
+
+#elif (defined __s390__)
 #define FAST_TRACEPOINT_LABEL(name) \
   asm ("    .global " SYMBOL(name) "\n" \
        SYMBOL(name) ":\n" \
