@@ -3,6 +3,8 @@
 
 *** Changes since GDB 7.12
 
+* Support for tracepoints on arm-linux was added in GDBServer.
+
 * Building GDB and GDBserver now requires a C++11 compiler.
 
   For example, GCC 4.8 or later.
